--- a/static/html/less/variables.less
+++ b/static/html/less/variables.less
@@ -1,11 +1,11 @@
 // Variables
 
-@import 'https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900';
+//@import 'https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900';
 
 @basefont1:'Rubik', sans-serif;
 @basefont2:'Rubik', sans-serif;
 
- 
+
 /*Theme Colors*/
 @topbar:#3c4451;
 @sidebar:#4F5467;
